--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -72,7 +72,7 @@ p {
 }
 
 .alert-box {
-    display: none;
+    text-align: center;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -83,17 +83,18 @@ p {
     text-transform: uppercase;
     border: 1px solid #f5c6cb;
     border-radius: 10px;
-    padding: 30px;
+    padding: 20px;
     max-width: 400px;
     width: 100%;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .alert-box button {
+    margin: 10px;
     background-color: #721c24;
     color: white;
     border: none;
-    padding: 10px 15px;
+    padding: 10px;
     font-size: 1.5em;
     letter-spacing: 0.01em;
     text-transform: uppercase;
